# CPS

./: .gitignore  Cargo.toml  README.md  testing_config.toml
html/: login.html  redirect.html
src/: contest.rs  database.rs  id.rs  main.rs  main_page.rs  problem.rs  request_handler.rs  sidebar.rs  submission.rs  test.rs  tester.rs  user.rs  worker.rs
src/database/: contest.rs  mod.rs  problem.rs  submission.rs  test.rs  user.rs
src/tests/: bombardment.rs  mod.rs
templates/: big_score.html  contest.html  edit_problem.html  index.html  login.html  main.html  not_found.html  problem.html  redirect.html  score.html  sidebar.html  submission.html
templates/css/: big_score.css  contest.css  edit_problem.css  login.css  main.css  problem.css  score.css  sidebar.css  submission.css
