[package]
name = "cps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }
rustls = "0.22"
rustls-pemfile = "2.1"
rustls-pki-types = "1.3"
tokio-rustls = "0.25"
hyper-rustls = "0.26"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
askama = "0.12"
bcrypt = "0.15"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = "0.4"